--- a/app3/package.json
+++ b/app3/package.json
@@ -10,21 +10,13 @@
     "serve": "webpack serve"
   },
   "devDependencies": {
-    "@types/react": "^18.2.5",
-    "@types/react-dom": "^18.2.4",
     "css-loader": "^6.7.3",
+    "mini-css-extract-plugin": "^2.7.5",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
-  },
-  "dependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^9.1.2",
-    "html-webpack-plugin": "^5.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
   }
 }
