--- a/app3/tsconfig.json
+++ b/app3/tsconfig.json
@@ -1,10 +1,27 @@
+// {
+//   "files": [],
+//   "references": [
+//     {
+//       "path": "./tsconfig.node.json"
+//     },
+//     {
+//       "path": "./tsconfig.app.json"
+//     }
+//   ] 
+// }
+
+
 {
+  // "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "global.d.ts"],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
-    "allowJs": true
-  },
-  "files": ["src/index.ts"]
+    "moduleResolution": "node",
+    // "types": ["@vue/cli-plugin-typescript"],
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
 }
