--- a/host/package.json
+++ b/host/package.json
@@ -16,11 +16,14 @@
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
+    "vue-loader": "^17.1.0",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.0.2",
     "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
+    "@babel/core": "^7.21.8",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
     "html-webpack-plugin": "^5.5.1",
