--- a/app3/package.json
+++ b/app3/package.json
@@ -1,47 +1,44 @@
 {
-  "name": "-",
-  "version": "0.0.0",
+  "name": "app3",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.7.3",
-    "html-webpack-plugin": "^5.5.1",
-    "postcss-loader": "^7.3.0",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "vite-plugin-federation": "^0.0.1",
-    "vite-plugin-vue": "^0.0.0",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "core-js": "^3.8.3",
+    "vue": "^3.2.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/preset-env": "^7.21.5",
-    "@originjs/vite-plugin-federation": "^1.2.2",
-    "@tsconfig/node18": "^2.0.0",
-    "@types/node": "^18.16.3",
-    "@vitejs/plugin-vue": "^4.2.1",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/cli-plugin-typescript": "^5.0.8",
-    "@vue/tsconfig": "^0.3.2",
-    "babel-loader": "^9.1.2",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~5.0.4",
-    "vite": "^4.3.4",
-    "vite-plugin-federation": "^0.0.1",
-    "vue": "^3.2.47",
-    "vue-loader": "^17.1.0",
-    "vue-template-compiler": "^2.7.14",
-    "vue-tsc": "^1.6.4",
-    "webpack-dev-server": "^4.13.3"
-  }
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^8.0.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "@babel/eslint-parser"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead",
+    "not ie 11"
+  ]
 }
